--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #F0F2F5;
+}
+
+.active{
+    @apply text-primary
+}
+
+.toCenter{
+    @apply flex justify-center items-center
+}
+
+.rounded-btn{
+    @apply w-[40px] h-[40px] rounded-full toCenter bg-gray-200 cursor-pointer
+}
+
+.hideScroll::-webkit-scrollbar{
+    display: none;
+}
